# GITest

./: CMakeLists.txt  GameScene.cpp  GameScene.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  PathHelper.h  Printer.cpp  Printer.h  ScenarioManager.cpp  ScenarioManager.h  main.cpp
ScenarioCommands/: AbstractScenarioCommand.cpp  AbstractScenarioCommand.h  EndCommand.cpp  EndCommand.h  HideBackgroundCommand.cpp  HideBackgroundCommand.h  HideCharacterCommand.cpp  HideCharacterCommand.h  HidePrinterCommand.cpp  HidePrinterCommand.h  ShowBackgroundCommand.cpp  ShowBackgroundCommand.h  ShowCharacterCommand.cpp  ShowCharacterCommand.h  ShowItemCommand.cpp  ShowItemCommand.h  ShowPrinterCommand.cpp  ShowPrinterCommand.h  ShowTextCommand.cpp  ShowTextCommand.h
